[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bson>=0.5.10",
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "google-cloud-storage>=3.4.0",
    "gunicorn>=23.0.0",
    "pillow>=11.3.0",
    "pymongo>=4.15.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "stripe>=13.0.1",
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
]
